--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Testing Git</title>
 </head>
 <body>
-	
+	<h1>This is a test</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A temporibus vero harum aliquam fugit, quasi minus dolorum velit similique laborum quibusdam nesciunt laudantium. Quae, veniam esse placeat optio id, molestiae.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae voluptates unde ullam recusandae eveniet explicabo distinctio possimus consectetur facilis consequatur, numquam error sit sequi ipsum dolore labore minima quia quas!</p>
 </body>
 </html>
